--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Hello world!!!</h1>
+		<h1>Objectives</h1>
+		<ul class="objectives">
+
+		</ul>
 	</div>
 
 <script type="module" src="scripts/start.js"></script>
+<script type="module" src="scripts/models.js"></script>
 </body>
 </html>
