--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 		<ul class="objectives">
 
 		</ul>
+		<h1>Project</h1>
+		<ul class="projects">
+
+		</ul>
 	</div>
 
 <script type="module" src="scripts/start.js"></script>
 <script type="module" src="scripts/models.js"></script>
+<script type="module" src="scripts/objectivesLogic.js"></script>
+<script type="module" src="scripts/projectLogic.js"></script>
 </body>
 </html>
